[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Nikita Smykov <132088678+Apicqq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-simple-history = "^3.7.0"
django-filter = "^24.2"
pillow = "^10.4.0"
django-bootstrap5 = "^24.2"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
