[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Nikita Smykov <132088678+Apicqq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-simple-history = "^3.7.0"
django-filter = "^24.2"
pillow = "^10.4.0"
django-bootstrap5 = "^24.2"
djoser = "^2.2.3"
django-debug-toolbar = "^4.4.6"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.2"



[tool.poetry.group.development.dependencies]
faker = "^26.0.0"
factory-boy = "^3.3.0"
black = "^24.4.2"


[tool.poetry.group.docs.dependencies]
drf-yasg = "^1.21.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
